# ChangeLog for dev-db/sqlguipart
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlguipart/ChangeLog,v 1.3 2003/09/16 21:44:07 caleb Exp $

*sqlguipart-0.5.1 (16 Sep 2003)

  16 Sep 2003; Caleb Tennis <caleb@gentoo.org> sqlguipart-0.5.1.ebuild:
  Version bump

*sqlguipart-0.4 (21 Aug 2002)

  21 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Initial ebuild. This is the 'core' of dev-db/sqlgui, which has been in this
  version separated in to a kpart that comes in a stnadalone package. You'll
  need sqlgui itself to do anythng with it (except writing a new frontend).