@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlguipart/sqlguipart-0.5.1.ebuild,v 1.1 2003/09/16 21:44:07 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlguipart/sqlguipart-0.5.1.ebuild,v 1.2 2004/02/24 20:05:21 mholzer Exp $
 
 inherit kde eutils
 need-kde 3.1
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.sqlgui.de/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 
 myconf="${myconf} --with-extra-includes=/usr/include/mysql"
 
