@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/sqlguipart
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlguipart/ChangeLog,v 1.3 2003/09/16 21:44:07 caleb Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlguipart/ChangeLog,v 1.4 2004/02/24 20:05:21 mholzer Exp $
+
+  24 Feb 2004; Martin Holzer <mholzer@gentoo.org> sqlguipart-0.5.1.ebuild:
+  x86 stable.
 
 *sqlguipart-0.5.1 (16 Sep 2003)
 
